<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b6bcc5"
    android:padding="6dp"
    tools:context=".AboutActivity">

    <View
        android:id="@+id/topview"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="10dp"
        android:background="#ff002b55"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomview"
        app:layout_constraintTop_toBottomOf="@id/topview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="35sp"
                android:textColor="#ff002b55"/>

            <TextView
                android:id="@+id/about_version_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_version"
                android:textSize="18sp"
                android:textColor="#ff002b55"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#ff002b55" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/logo"/>

                <TextView
                    android:id="@+id/about_team_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/about_team"
                    android:textSize="18sp"
                    android:textColor="#ff002b55"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#ff002b55" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/church"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/about_church"
                    android:textSize="18sp"
                    android:textColor="#ff002b55"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#ff002b55" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/prist"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/about_priest"
                    android:textSize="18sp"
                    android:textColor="#ff002b55"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#ff002b55" />

            <LinearLayout
                android:id="@+id/about_facebook_layout"
                style="@style/transparent_orange_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/facebook_logo" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/about_facebook"
                    android:textColor="#0044ff"
                    android:textSize="25sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#ff002b55" />

            <LinearLayout
                android:id="@+id/about_rate_layout"
                style="@style/transparent_orange_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/contact_rate" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="تقييم التطبيق"
                    android:textColor="#0044ff"
                    android:textSize="25sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#ff002b55" />

            <LinearLayout
                android:id="@+id/about_share_layout"
                style="@style/transparent_orange_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/share_logo" />

                <TextView
                    android:id="@+id/about_share_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/about_share"
                    android:textColor="#0044ff"
                    android:textSize="25sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#ff002b55" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/contrbution_logo" />

                <TextView
                    android:id="@+id/about_contrbution_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/about_contrbution"
                    android:textSize="18sp"
                    android:textColor="#ff002b55"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/bottomview"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="10dp"
        android:background="#ff002b55"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>